added resources and form

--- a/index.html
+++ b/index.html
@@ -1,4 +1,56 @@
 <h1>Norskhjelp</h1>
 <p>Her kommer tips</p>
 <img src="potato.png" />
+<h2>Læringsstrategier</h2>
+<ul>
+	<li>Lesing</li>
+	<li>Begreper</li>
+	<li>Muntlig</li>
+</ul>
+<h2>Ressurser</h2>
+<ul>
+	<li>
+		<a href="https://www.ntnu.edu/learnnow">LearnNow</a>
+	</li>
+	<li>
+		<a href="https://lexin.oslomet.no/#/">Lexin ordbok</a>
+	</li>
+</ul>
+<h2>Ta kontakt!</h2>
+<form>
+	<div>
+		<label for="navn">Navn</label>
+		<input name="navn" id="navn"/>
+	</div>
 
+	<div>
+		<label for="e-post">E-post</label>
+		<input name="e-post" id="e-post" type="email" />
+	</div>
+
+	<div>
+		<fieldset>
+			<legend>Hva trenger du hjelp med?</legend>
+			<label for="hjelp-grammatikk">
+				 <input name ="hjelp" id="hjelp-grammatikk" type="checkbox"/>
+				Grammatikk
+			</label>
+
+			<label for="hjelp-uttale">
+				  <input name ="hjelp" id="hjelp-uttale" type="checkbox"/>
+				Uttale
+			</label>
+			<label for="hjelp-ordforråd">
+				   <input name ="hjelp" id="hjelp-ordforråd" type="checkbox"/>
+				Ordforråd
+			</label>
+			<label for="hjelp-læringsstrategier">
+				 <input name ="hjelp" id="hjelp-grammatikk" type="checkbox"/>	
+				Læringsstrategier
+			</label>
+		</fieldset>
+	</div>
+	<div>
+		<button>Send inn</button>
+	</div>
+</form>
