font and colors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,48 @@
-<h1>Norskhjelp</h1>
-<p>Her kommer tips</p>
-<img src="potato.png" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Norskhjelp</title>
+        <link rel="icon" href="potato.png" type="image/x-icon">
+    <style>
+        body {
+            font-family: Arial nova, sans-serif;
+            background-color: #f0ffff;
+	    margin: 0;
+            padding: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        p {
+            color: #666;
+        }
+        .highlight {
+            background-color: yellow;
+        }
+	.banner-flag {
+		max-width: 100px;	
+	}
+	.header-background {
+		background-color: #eddfe7;
+		display: flex;
+	}
+	.header-half {
+		width: 50%;
+	}
+    </style>
+</head>
+<body>
+<div class="header-background" >
+	<div class="header-half">
+		<h1>Norskhjelp</h1>
+		<p>Her kommer tips</p>
+	</div>
+	<div class="header-half">
+		<img class="banner-flag" src="potato.png" />
+	</div>
+</div>
 <h2>Læringsstrategier</h2>
 <ul>
 	<li>Lesing</li>
@@ -54,3 +96,5 @@
 		<button>Send inn</button>
 	</div>
 </form>
+</body>
+</html>
