--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 		<div class="header-half">
 			<h1>Norskhjelp</h1>
 			<p>Her kommer <strong>tips</strong></p>
+			<p>Hvis du ikke er interessert i å lære, kan du heller <a href="potetspill.html">spille</a>.</p>
 		</div>
 		<div class="header-half">
 			<img class="banner-flag" src="potato.png" />
