imported files instead of having them in html file

--- a/index.html
+++ b/index.html
@@ -6,39 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Norskhjelp</title>
 	<link rel="icon" href="potato.png" type="image/x-icon">
-	<style>
-		body {
-			font-family: Arial nova, sans-serif;
-			background-color: #f0ffff;
-			margin: 0;
-			padding: 20px;
-		}
-
-		h1 {
-			color: #333;
-		}
-
-		p {
-			color: #666;
-		}
-
-		.highlight {
-			background-color: yellow;
-		}
-
-		.banner-flag {
-			max-width: 100px;
-		}
-
-		.header-background {
-			background-color: #eddfe7;
-			display: flex;
-		}
-
-		.header-half {
-			width: 50%;
-		}
-	</style>
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
