made a basic js backend file

--- a/lesing.html
+++ b/lesing.html
@@ -14,7 +14,7 @@
 		<div class="header-half">
 			<h1>Strategier for lesing</h1>
 			<p>Hvordan kan du lese på en mer effektiv måte?</p>
-            <p>Gå tilbake til <a href="index.html">forsiden</a></p>
+            <p>Gå tilbake til <a href="./">forsiden</a></p>
 		</div>
 		<div class="header-half">
 			<img class="banner-flag" src="potato.png" />
