--- a/potetspill.html
+++ b/potetspill.html
@@ -14,7 +14,7 @@
 		<div class="header-half">
 			<h1>Det STORE potetspillet!!</h1>
 			<p></p>
-            <p>Gå tilbake til <a href="./index.html">forsiden</a></p>
+            <p>Gå tilbake til <a href="./">forsiden</a></p>
 		</div> 
 		<div class="header-half">
 			<img class="banner-flag" src="potato.png" />
